PW-135: Fixed responsive subnavigation to have consistent font size and avoid wrapping on SM breakpoint

--- a/web/app/themes/mitlib-news/css/newsmobile.css
+++ b/web/app/themes/mitlib-news/css/newsmobile.css
@@ -91,7 +91,7 @@ hr.news {
 }
 .newsNav ul li a {
 	color: #666;
-	font-size: 12px;
+	font-size: 16px;
 }
 body.tax-bibliotech_issues .newsNav ul li a {
 	color: #666;
